# frb

./: Cargo.toml  LICENSE-MIT  README.md  benchmarks.txt
benches/: benchmarks.rs
src/: lib.rs  tests.rs  uniformity_tests.rs
util/: find_shifts.rs
